<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:layout_weight="0.8"
        android:text="@string/textview1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:layout_weight="1.5"
        android:text="@string/textview2"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:layout_weight="0.2"
        android:text="@string/textview3"
        android:textSize="24sp" />

</LinearLayout>